# DaysLeftExam

./: README.md  pyproject.toml
src/: status.py
